mgse-menu (1.0.2) lisa; urgency=low

  * Branded icon
  * Removed fav tooltip
  * Changed layout, favs on the left

 -- Clement Lefebvre <root@linuxmint.com>  Sat,  29 Oct 2011 12:30:00 +0000

mgse-menu (1.0.1) lisa; urgency=low

  * Changed compatibility to "3.2"

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  27 Oct 2011 19:39:00 +0000

mgse-menu (1.0.0) lisa; urgency=low

  * Initial release

 -- Clement Lefebvre <root@linuxmint.com>  Sat,  17 Sep 2011 17:05:00 +0000
