@@ -1,6 +1,4 @@
  - Categories should not appear when they are empty
- - Add places
- - Add removable devices
  - Add drag & drop of app into favorites to add the app as favorite
  - Add drag & drop of favorites into the apps to remove a favorite
  - Add drag & drop within favorites to change their order
