@@ -3,6 +3,8 @@ mgse-menu (1.0.2) lisa; urgency=low
   * Branded icon
   * Removed fav tooltip
   * Changed layout, favs on the left
+  * Added nautilus bookmarks
+  * Added mounted devices
 
  -- Clement Lefebvre <root@linuxmint.com>  Sat,  29 Oct 2011 12:30:00 +0000
 
